feat(config-api): shibboleth endpoint - wip
